# vttkit

./: .gitignore  LICENSE  README.md  architecture.md  pyproject.toml  requirements.txt  setup.py
examples/: audio_transcribe.py  basic_usage.py  live_stream.py  merging_example.py  youtube_download.py
tests/: test_transcription.py
vttkit/: __init__.py  core.py  corrector.py  downloader.py  merger.py  models.py  parser.py  utils.py
vttkit/transcription/: __init__.py  base.py  faster_whisper_backend.py
vttkit/vtt_json/: __init__.py  converter.py  parser.py
vttkit/youtube/: __init__.py  client.py  m3u8.py
