[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vttkit"
version = "0.3.0"
description = "Complete VTT (WebVTT) processing toolkit with YouTube support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "VTTKit Contributors"}
]
keywords = ["vtt", "webvtt", "subtitles", "captions", "youtube", "live-stream", "hls", "m3u8"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28.0",
    "yt-dlp>=2023.0.0",
    "syllables>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vttkit/vttkit"
Documentation = "https://github.com/vttkit/vttkit#readme"
Repository = "https://github.com/vttkit/vttkit"
Issues = "https://github.com/vttkit/vttkit/issues"

[tool.setuptools]
packages = ["vttkit", "vttkit.youtube", "vttkit.vtt_json"]

[tool.setuptools.package-data]
vttkit = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
